--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,13 @@
             <artifactId>vertx-mysql-client</artifactId>
         </dependency>
 
+        <!-- 常用工具 -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.3.10</version>
+        </dependency>
+
     </dependencies>
 
     <build>
